# forth3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: tokio_repl.rs
f3repl/: .gitignore  Cargo.toml
f3repl/src/: main.rs
forthboy/src/: main.rs
src/: dictionary.rs  disk.rs  fastr.rs  leakbox.rs  lib.rs
src/testutil/: mod.rs
src/vm/: async_vm.rs  builtins.rs  mod.rs
src/vm/builtins/: bitops.rs
ui-test/: Cargo.toml
ui-test/src/: main.rs
ui-test/ui-tests/: badstar.fth  smallstack.fth  star.fth
