[package]
name = "forth3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
hash32 = "0.3.1"
futures-util = { version = "0.3.28", default-features = false, optional = true }

[features]
default = []
use-std = []
floats = []
async = ["futures-util"]

[dev-dependencies]
futures = "0.3.28"
